<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<include layout="@layout/app_title_bar"/>

	<TextView style="@style/ActTitleText"/>

	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		android:orientation="vertical"
		android:padding="@dimen/app_detail_padding">
		<RadioGroup android:id="@+id/radio_group"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:background="@drawable/btn_default_normal_disable">
			<RadioButton android:id="@+id/option_01"
				android:text="@string/report_option_01"
				android:textSize="@dimen/text_size_medium" />
			<RadioButton android:id="@+id/option_02"
				android:text="@string/report_option_02"
				android:textSize="@dimen/text_size_medium" />
			<RadioButton android:id="@+id/option_03"
				android:text="@string/report_option_03"
				android:textSize="@dimen/text_size_medium" />
			<RadioButton android:id="@+id/option_04"
				android:text="@string/report_option_04"
				android:textSize="@dimen/text_size_medium"/>
		</RadioGroup>
	</ScrollView>
	<ImageView style="@style/ButtonBoxShadow" />
	<LinearLayout style="@style/ButtonBox">
		<Button android:id="@id/submit"
			style="@style/Button"
			android:text="@string/submit" />
		<Button android:id="@id/cancel"
			style="@style/Button"
			android:text="@string/cancel" />
	</LinearLayout>
</LinearLayout>