<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="33dp"
	android:paddingLeft="5dp"
	android:paddingRight="4dp"
	android:gravity="center_vertical"
	android:background="@drawable/pricetype_bar_bg">
	
	<TextView android:id="@+id/pricetype_bar_title"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:gravity="center_vertical"
		android:singleLine="true" />
	<Button android:id="@+id/free_apps"
		android:layout_width="58dp"
		android:layout_height="24dp"
		android:layout_margin="1dp"
		android:visibility="gone"
		android:background="@drawable/pricetype_btn"
		android:text="@string/pricetype_free" />
	<Button android:id="@+id/paid_apps"
		android:layout_width="58dp"
		android:layout_height="24dp"
		android:layout_margin="1dp"
		android:visibility="gone"
		android:background="@drawable/pricetype_btn"
		android:text="@string/pricetype_paid" />
	<Button android:id="@+id/all_apps"
		android:layout_width="58dp"
		android:layout_height="24dp"
		android:layout_margin="1dp"
		android:visibility="gone"
		android:background="@drawable/pricetype_btn"
		android:text="@string/pricetype_new" />
</LinearLayout>